--- a/SPA/css/spa.shell.css
+++ b/SPA/css/spa.shell.css
@@ -59,8 +59,9 @@
 }
 .spa-shell-main-nav {
   width  : 10px;
-  
   background : #eee;
+  z-index       : 1;
+  cursor        : pointer;
 }
 .spa-shell-head-navButton {
         top        : 4px;
